--- a/openatlas/templates/relation/update.html
+++ b/openatlas/templates/relation/update.html
@@ -1,9 +1,6 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a>
-    > {{ origin|link|safe }}
-    > {{ related|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('actor'), 'actor_index'], origin, related, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
