--- a/openatlas/templates/source/add.html
+++ b/openatlas/templates/source/add.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source|link|safe }}
-    > {{ _('add')|uc_first + ' ' + _(class_name)|uc_first }}
+    {{ [[_('source'), 'source_index'], source, _('add') + ' ' + _(class_name).capitalize()]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|safe }}
