--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -1,8 +1,6 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('source'), 'source_index'], source, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {% if modifier %}
