--- a/openatlas/templates/user/update.html
+++ b/openatlas/templates/user/update.html
@@ -1,10 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %}- {{ user.username }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('user_index') }}">{{ _('user')|uc_first }}</a>
-    > {{ user|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('admin'), 'admin_index'], [_('user'), 'user_index'], user, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form('user-form')|safe }}
