--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    {{ [[_('profile'), 'profile_index'], _('change edit')]|crumb|safe }}
+    {{ [[_('profile'), 'profile_index'], _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ 'Profile'|manual_link|safe }}
