--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -1,12 +1,10 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     {% if origin %}
-        <a href="{{ url_for((origin.view_name) + '_index') }}">{{ _(origin.view_name)|uc_first }}</a>
-        > {{ origin|link|safe }}
+        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + _('source').capitalize()]|crumb|safe }}
     {% else %}
-        <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
+        {{ [[_('source'), 'source_index'], '+ ' + _('source').capitalize()]|crumb|safe }}
     {% endif %}
-    > + {{ _('source')|uc_first }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
