--- a/openatlas/templates/sql/execute.html
+++ b/openatlas/templates/sql/execute.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('sql_index') }}">SQL</a>
-    > {{ _('execute')|uc_first }}
+    {{ [[_('admin'), 'admin_index'], ['SQL', 'sql_index'], _('execute')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ 'SQL'|manual_link|safe }}
