--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > SQL
+    {{ [[_('admin'), 'admin_index'], 'SQL']|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ 'SQL'|manual_link|safe }}
