--- a/openatlas/templates/translation/update.html
+++ b/openatlas/templates/translation/update.html
@@ -1,9 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source|link|safe }}
-    > {{ translation|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('source'), 'source_index'], source, translation, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
