--- a/openatlas/templates/translation/view.html
+++ b/openatlas/templates/translation/view.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source|link|safe }}
-    > {{ translation.name|truncate_string|safe }}
+    {{ [[_('source'), 'source_index'], source, translation.name]|crumb|safe }}
 {% endblock %}
 {% block content %}
 <div class="button-bar">
