--- a/openatlas/templates/types/insert.html
+++ b/openatlas/templates/types/insert.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('node_index') }}">{{ _('types')|uc_first }}</a>
-    > {{ root|link|safe }}
-    > +
+    {{ [[_('types'), 'node_index'], root, '+']|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
