--- a/openatlas/templates/types/move.html
+++ b/openatlas/templates/types/move.html
@@ -1,11 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('node_index') }}">{{ _('types')|uc_first }}</a>
-    {% if root %}
-        > {{ root|link|safe }}
-    {% endif %}
-    > {{ node|link|safe }}
-    > {{ _('move') }}
+    {{ [[_('types'), 'node_index'], root, node, _('move')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <form class="table" id="checkbox-form" method="post">
