--- a/openatlas/templates/user/view.html
+++ b/openatlas/templates/user/view.html
@@ -1,9 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %}- {{ user.username }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('user_index') }}">{{ _('user')|uc_first }}</a>
-    > {{ user.username }}
+    {{ [[_('admin'), 'admin_index'], [_('user'), 'user_index'], user.username]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {% if 'manager'|is_authorized %}
