--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css"/>
     <link rel="stylesheet" href="/static/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css"/>
+    <link rel="stylesheet" href="/static/node_modules/jstree/dist/themes/default/style.min.css"/>
 
     <link rel="mask-icon" href="/static/safari-pinned-tab.svg"/>
     <link rel="stylesheet" href="/static/css/reset.css?v={{ config['VERSION'] }}"/>
