--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -3,9 +3,9 @@
     {{ [_('actor')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'Actor'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
-        <div>
+        <div class="toolbar">
+            {{ 'Actor'|manual_link|safe }}
             {% for code in config['CLASS_CODES']['actor']%}
                 <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_insert', code=code) }}">+ {{ code|get_class_name }}</a>
             {% endfor %}
