--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -3,9 +3,10 @@
     {{ [_('event')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'Event'|manual_link|safe }}
+
     {% if 'contributor'|is_authorized %}
-        <div>
+        <div class="toolbar">
+            {{ 'Event'|manual_link|safe }}
             {% for code in config['CLASS_CODES']['event'] %}
                 <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code) }}">+ {{ code|get_class_name }}</a>
             {% endfor %}
