--- a/openatlas/templates/file/index.html
+++ b/openatlas/templates/file/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     {% if 'contributor'|is_authorized %}
-        <div>
+        <div class="toolbar">
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert') }}">+ {{ _('file')|uc_first }}</a>
         </div>
     {% endif %}
