--- a/openatlas/templates/object/index.html
+++ b/openatlas/templates/object/index.html
@@ -3,9 +3,9 @@
     {{ [_('object')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'Object'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
-        <div>
+        <div class="toolbar">
+            {{ 'Object'|manual_link|safe }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('object_insert') }}">+ {{ 'E84'|get_class_name }}</a>
         </div>
     {% endif %}
