--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -4,9 +4,9 @@
 {% endblock %}
 {% block content %}
     <div style="float:left;">
-        {{ 'Place'|manual_link|safe }}
         {% if 'contributor'|is_authorized %}
-            <div>
+        <div class="toolbar">
+            {{ 'Place'|manual_link|safe }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert') }}">+ {{ _('place')|uc_first }}</a>
             </div>
         {% endif %}
