--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -54,42 +54,46 @@
             {{ tables['notes'].display('notes')|safe }}
         {% endif %}
     {% else %}
-        <div>{{ intro|safe }}</div>
-        <div>
-            {{ _('text_intro',
-                link_openatlas='<a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a>'|safe,
-                link_github='<a target="_blank" rel="noopener" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
-                link_cidoc='<a target="_blank" rel="noopener" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
-                link_wiki='<a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/projects/uni/wiki">Wiki</a>'|safe,
-                link_demo='<a target="_blank" rel="noopener" href="https://demo.openatlas.eu">Demo</a>'|safe
-            )|nl2br|safe }}
-        </div>
-        <div>
-            <h1>OpenAtlas {{ _('team')|uc_first }}</h1>
-            <p>Stefan Eichert (Idea, Concept and Data Modelling)</p>
-            <p>Alexander Watzinger (Lead Developer and Concept)</p>
-            <p>Bernhard Koschicek (Software Development) </p>
-            <p>Christoph Hoffmann (Frontend Development)</p>
-            <p>Veronika Gründhammer (Project Administration)</p>
-            <p>Jan Belik (Logo Design and Design Consulting)</p>
-            <p>Daniel Kittel (Quality Assurance)</p>
-            <h1>OpenAtlas Contributors</h1>
-            <p>These people supported us in many different ways. Our thanks goes to all of them.</p>
-            <p>
-                Asil Çetin<br>
-                Christof Rauchenberger<br>
-                Dalibor Pančić<br>
-                Johannes Preiser-Kapeller<br>
-                Judith Pucher<br>
-                Katharina Winckler<br>
-                Mihailo Popović<br>
-                Nina Brundke<br>
-                Peter Andorfer<br>
-                Petra Heinicker<br>
-                Sandra Lehecka<br>
-                Saranya Balasubramanian<br>
-                Stefan Probst
-            </p>
-        </div>
+        {% if intro: %}
+            <p>{{ intro|safe }}</p>
+        {% endif %}
+
+        <h1>OpenAtlas</h1>
+        {{ _('text_intro',
+            link_openatlas='<a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a>'|safe,
+            link_github='<a target="_blank" rel="noopener" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
+            link_cidoc='<a target="_blank" rel="noopener" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
+            link_wiki='<a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/projects/uni/wiki">Wiki</a>'|safe,
+            link_demo='<a target="_blank" rel="noopener" href="https://demo.openatlas.eu">Demo</a>'|safe
+        )|nl2br|safe }}
+
+        <h2>{{ _('team')|uc_first }}</h2>
+        <p>
+            <strong>Stefan Eichert</strong> - Idea, Concept and Data Modelling<br>
+            <strong>Alexander Watzinger</strong> - Lead Developer and Concept<br>
+            <strong>Bernhard Koschicek</strong> - Software Development<br>
+            <strong>Christoph Hoffmann</strong> - Frontend Development<br>
+            <strong>Veronika Gründhammer</strong> - Project Administration<br>
+            <strong>Jan Belik</strong> - Logo Design and Design Consulting<br>
+            <strong>Daniel Kittel</strong> - Quality Assurance
+        </p>
+
+        <h2>Contributors</h2>
+        <p>These people supported us in many ways, our thanks goes to all of them.</p>
+        <p>
+            Asil Çetin<br>
+            Christof Rauchenberger<br>
+            Dalibor Pančić<br>
+            Johannes Preiser-Kapeller<br>
+            Judith Pucher<br>
+            Katharina Winckler<br>
+            Mihailo Popović<br>
+            Nina Brundke<br>
+            Peter Andorfer<br>
+            Petra Heinicker<br>
+            Sandra Lehecka<br>
+            Saranya Balasubramanian<br>
+            Stefan Probst
+        </p>
     {% endif %}
 {% endblock %}
