--- a/openatlas/templates/user/index.html
+++ b/openatlas/templates/user/index.html
@@ -3,9 +3,9 @@
     {{ [[_('admin'), 'admin_index'], _('user')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'User'|manual_link|safe }}
     {% if 'manager'|is_authorized %}
-        <div>
+        <div class="toolbar">
+            {{ 'User'|manual_link|safe }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
         </div>
     {% endif %}
