--- a/openatlas/templates/admin/check_links.html
+++ b/openatlas/templates/admin/check_links.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('check links')]|crumb|safe }}{% endblock %}
 {% block content %}
-    {{ 'Data_integrity'|manual_link|safe }}
-    <p>
-        <a class="button" href="{{ url_for('admin_check_links', check='check')}}">{{ _('check links')|uc_first }}</a>
+    <div class="toolbar">
+        {{ 'Data_integrity'|manual_link|safe }}
+        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_check_links', check='check')}}">{{ _('check links')|uc_first }}</a>
         {{ _('this could take some time')|uc_first }}
-    </p>
+    </div>
     {% if table.rows %}
         {{ table.display()|safe }}
     {% elif check %}
