--- a/openatlas/templates/admin/check_similar.html
+++ b/openatlas/templates/admin/check_similar.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('check similar names')]|crumb|safe }}{% endblock %}
 {% block content %}
-    {{ 'Data_integrity'|manual_link|safe }}
+    <div class="toolbar">
+        {{ 'Data_integrity'|manual_link|safe }}
+    </div>
     {{ form|display_form|safe }}
     {% if table %}
         {% if table.rows %}
