--- a/openatlas/templates/admin/logo.html
+++ b/openatlas/templates/admin/logo.html
@@ -1,13 +1,15 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('logo')]|crumb|safe }}{% endblock %}
 {% block content %}
-    {{ 'Logo'|manual_link|safe }}
+    <div class="toolbar">
+        {{ 'Logo'|manual_link|safe }}
+        {% if not form %}
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_logo', action='remove') }}">{{ _('remove logo')|uc_first }}</a>
+        {% endif %}
+    </div>
     {% if form %}
         {{ form|display_form|safe }}
     {% else %}
-        <p>
-            <a class="button" href="{{ url_for('admin_logo', action='remove') }}">{{ _('remove logo')|uc_first }}</a>
-        </p>
         <img alt="logo" src="{{ url_for('display_file', filename=filename) }}">
     {% endif %}
 {% endblock %}
