--- a/openatlas/templates/admin/map.html
+++ b/openatlas/templates/admin/map.html
@@ -3,6 +3,8 @@
     {{ [[_('admin'), 'admin_index'], _('map')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'Map'|manual_link|safe }}
+    <div class="toolbar">
+        {{ 'Map'|manual_link|safe }}
+    </div>
     {{ form|display_form|safe }}
 {% endblock %}
