--- a/openatlas/templates/import/index.html
+++ b/openatlas/templates/import/index.html
@@ -3,9 +3,9 @@
     {{ [[_('admin'), 'admin_index'], _('import')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'Import'|manual_link|safe }}
     {% if 'admin'|is_authorized %}
-        <div>
+        <div class="toolbar">
+            {{ 'Import'|manual_link|safe }}
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('import_project_insert') }}">+ {{ _('project')|uc_first }}</a>
         </div>
     {% endif %}
