--- a/openatlas/templates/sql/execute.html
+++ b/openatlas/templates/sql/execute.html
@@ -3,13 +3,15 @@
     {{ [[_('admin'), 'admin_index'], ['SQL', 'sql_index'], _('execute')]|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'SQL'|manual_link|safe }}
-    {% if file_data['file'] %}
-        <p style="margin-top: 1em;">
-            {{ _('latest backup')|uc_first }}: {{ file_data['file'] }}, {{ file_data['size'] }},
-            <a href="{{ url_for('download_sql', filename=file_data['file']) }}">{{ _('download')|uc_first }}</a>
-        </p>
-    {% endif %}
+    <div class="toolbar">
+        {{ 'SQL'|manual_link|safe }}
+        {% if file_data['file'] %}
+            <p style="margin-top: 1em;">
+                {{ _('latest backup')|uc_first }}: {{ file_data['file'] }}, {{ file_data['size'] }},
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('download_sql', filename=file_data['file']) }}">{{ _('download')|uc_first }}</a>
+            </p>
+        {% endif %}
+    </div>
     {% if file_data['backup_too_old'] %}
         <p>
             {{ _('There seems to be no recent backup, please make one') }}
