--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -3,16 +3,18 @@
     {{ [[_('admin'), 'admin_index'], 'SQL']|crumb|safe }}
 {% endblock %}
 {% block content %}
-    {{ 'SQL'|manual_link|safe }}
+    <div class="toolbar">
+        {{ 'SQL'|manual_link|safe }}
+    </div>
     <h2 class="error">
         {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an unusable application!') }}
     </h2>
     <p>
         <input id="sql_risk_aware" type="checkbox">
-        {{ _("I'm aware of the risk, have read the documentation and made a database backup.") }}
+        {{ _("I'm aware of the risk and have read the documentation.") }}
     </p>
     <p>
-        <a id="proceed_link" class="button" href="">{{ _('proceed')|uc_first }}</a>
+        <a class="btn btn-outline-primary btn-sm" id="proceed_link" href="">{{ _('proceed')|uc_first }}</a>
     </p>
     <script>
         $('#sql_risk_aware').change(function() {
