--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -10,7 +10,9 @@
         <script src="/static/node_modules/d3/dist/d3.min.js"></script>
         <div style="float:right;">
             <svg></svg>
-            <p><a class="button" onclick="saveSvgAsPng(d3.select('svg').node(), 'network.png')">{{ _('download')|uc_first }}</a></p>
+            <p>
+                <a class="btn btn-outline-primary btn-sm" onclick="saveSvgAsPng(d3.select('svg').node(), 'network.png')">{{ _('download')|uc_first }}</a>
+            </p>
         </div>
         <script>
             var graph = {{ json_data|safe }};
