--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -4,8 +4,12 @@
 {% endblock %}
 {% block content %}
     {% if modifier %}
-        <p class="error">{{ _('error modified by %(username)s', username=modifier|safe) }}</p>
-        <p><a class="button" href="{{ url_for('source_update', id_=source.id) }}">{{ _('reload')|uc_first }}</a></p>
+        <p class="error">
+            {{ _('error modified by %(username)s', username=modifier|safe) }}
+        </p>
+        <p>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_update', id_=source.id) }}">{{ _('reload')|uc_first }}</a>
+        </p>
     {% endif %}
     {{ form|display_form|safe }}
 {% endblock %}
