subunits and layer control for map improved

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -58,6 +58,7 @@
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/MarkerCluster.Default.css">
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.css">
 <link rel="stylesheet" href="/static/css/map.css">
+<link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/leaflet-groupedlayercontrol-gh-pages/dist/leaflet.groupedlayercontrol.min.css">
 
 
 <script src="/static/vendor/leaflet-1.3.4/leaflet.js"></script>
@@ -68,4 +69,5 @@
 <script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/leaflet.markercluster.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/usermarker-1.0/leaflet.usermarker.js"></script>
+<script src="/static/vendor/leaflet-1.3.4/leaflet-groupedlayercontrol-gh-pages/dist/leaflet.groupedlayercontrol.min.js"></script>
 
