Changed links with href to spans

--- a/openatlas/templates/profile/password.html
+++ b/openatlas/templates/profile/password.html
@@ -7,7 +7,7 @@
     <script>
         $(document).ready(function () {
             $("#show_passwords").after(function() {
-              return '<a class="btn btn-outline-primary btn-sm" id="generate-password">{{ _('generate password')|uc_first }}</a>';
+                return '<span class="btn btn-outline-primary btn-sm" id="generate-password">{{ _('generate password')|uc_first }}</span>';
             });
         });
     </script>
