--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -21,9 +21,9 @@
         <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
     </ul>
     <div id="tab-info">
-        <div class="button-bar">
+        <div class="toolbar">
             {% if 'contributor'|is_authorized %}
-                <a href="{{ url_for('actor_update', id_=actor.id) }}">{{ _('edit')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_update', id_=actor.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ actor|display_delete_link|safe }}
             {% endif %}
             {{ actor.id|bookmark_toggle|safe }}
@@ -42,19 +42,19 @@
     </div>
     <div id="tab-source">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_source', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('source_insert', origin_id=actor.id) }}">+ {{ _('source')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_source', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=actor.id) }}">+ {{ _('source')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['source'].display('source')|safe }}
     </div>
     <div id="tab-event">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('involvement_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('involvement_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
                 {% for code in config['CLASS_CODES']['event'] %}
-                    <a href="{{ url_for('event_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
                 {% endfor %}
             </div>
         {% endif %}
@@ -65,7 +65,7 @@
         <div class="toolbar">
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('relation_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
                 {% for code in config['CLASS_CODES']['actor'] %}
-                    <a href="{{ url_for('actor_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
                 {% endfor %}
             </div>
         {% endif %}
@@ -73,8 +73,8 @@
     </div>
     <div id="tab-member-of">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('membership_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('membership_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['member_of'].display('member_of')|safe }}
@@ -82,8 +82,8 @@
     {% if tables['member'] %}
         <div id="tab-member">
             {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('member_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <div class="toolbar">
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('member_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
                 </div>
             {% endif %}
             {{ tables['member'].display('member')|safe }}
@@ -91,20 +91,20 @@
     {% endif %}
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_reference', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='bibliography', origin_id=actor.id) }}">+ {{ _('bibliography')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='edition', origin_id=actor.id) }}">+ {{ _('edition')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='external_reference', origin_id=actor.id) }}">+ {{ _('external reference')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_reference', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=actor.id) }}">+ {{ _('bibliography')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=actor.id) }}">+ {{ _('edition')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference', origin_id=actor.id) }}">+ {{ _('external reference')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['reference'].display('reference')|safe }}
     </div>
     <div id="tab-file">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_file', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('file_insert', origin_id=actor.id) }}">+ {{ _('file')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_file', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert', origin_id=actor.id) }}">+ {{ _('file')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['file'].display('file')|safe }}
