--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -18,16 +18,16 @@
         <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
     </ul>
     <div id="tab-info">
-        <div class="button-bar">
+        <div class="toolbar">
             {% if 'contributor'|is_authorized %}
-                <a href="{{ url_for('file_update', id_=entity.id) }}">{{ _('edit')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_update', id_=entity.id) }}">{{ _('edit')|uc_first }}</a>
                 {{ entity|display_delete_link|safe }}
             {% endif %}
             {{ entity.id|bookmark_toggle|safe }}
             {% if missing_file %}
                 <span class="error">{{ _('missing file')|uc_first }}!</span>
             {% else %}
-                <a href="{{ url_for('download_file', filename=filename) }}">{{ _('download')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('download_file', filename=filename) }}">{{ _('download')|uc_first }}</a>
             {% endif %}
         </div>
         <h1>{{ entity.name }}</h1>
@@ -52,8 +52,8 @@
         {% if 'contributor'|is_authorized %}
         <div class="toolbar">
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_add', id_=entity.id, class_name='source')}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('source_insert', origin_id=entity.id) }}">+ {{ _('source')|uc_first }}</a>
-            </div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=entity.id) }}">+ {{ _('source')|uc_first }}</a>
+        </div>
         {% endif %}
         {{ tables['source'].display('source')|safe }}
     </div>
@@ -62,12 +62,12 @@
             <div id="tab-{{name}}">
                 {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
                     <div>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_add', id_=entity.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
+                        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_add', id_=entity.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
                         {% if name == 'place' %}
-                            <a href="{{ url_for('place_insert', origin_id=entity.id) }}">+ {{ _('place')|uc_first }}</a>
+                            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=entity.id) }}">+ {{ _('place')|uc_first }}</a>
                         {% else %}
                             {% for code in config['CLASS_CODES'][name]%}
-                                <a href="{{ url_for(name + '_insert', code=code, origin_id=entity.id) }}">+ {{ code|get_class_name }}</a>
+                                <a class="btn btn-outline-primary btn-sm" href="{{ url_for(name + '_insert', code=code, origin_id=entity.id) }}">+ {{ code|get_class_name }}</a>
                             {% endfor %}
                         {% endif %}
                     </div>
@@ -78,10 +78,10 @@
     {% endfor %}
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_add_reference', id_=entity.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='bibliography', origin_id=entity.id) }}">+ {{ _('bibliography')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='edition', origin_id=entity.id) }}">+ {{ _('edition')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_add_reference', id_=entity.id)}}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=entity.id) }}">+ {{ _('bibliography')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=entity.id) }}">+ {{ _('edition')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['reference'].display('reference')|safe }}
