--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -27,9 +27,9 @@
         {% endif %}
     </ul>
     <div id="tab-info">
-        <div class="button-bar">
+        <div class="toolbar">
             {% if 'contributor'|is_authorized %}
-                <a href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_update', id_=object_.id) }}">{{ _('edit')|uc_first }}</a>
                 {% if not subunits %}
                     {{ object_|display_delete_link|safe }}
                 {% endif %}
@@ -64,16 +64,16 @@
         {% if 'contributor'|is_authorized %}
         <div class="toolbar">
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_source', id_=object_.id) }}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
-            </div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert', origin_id=object_.id) }}">+ {{ _('source')|uc_first }}</a>
+        </div>
         {% endif %}
         {{ tables['source'].display('source')|safe }}
     </div>
     <div id="tab-event">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
+            <div class="toolbar">
                 {% for code in config['CLASS_CODES']['event'] %}
-                    <a href="{{ url_for('event_insert', code=code, origin_id=object_.id) }}">+ {{ code|get_class_name }}</a>
+                    <a class="btn btn-outline-primary btn-sm" href="{{ url_for('event_insert', code=code, origin_id=object_.id) }}">+ {{ code|get_class_name }}</a>
                 {% endfor %}
             </div>
         {% endif %}
@@ -86,48 +86,48 @@
     {% endif %}
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_reference', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='bibliography', origin_id=object_.id) }}">+ {{ _('bibliography')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='edition', origin_id=object_.id) }}">+ {{ _('edition')|uc_first }}</a>
-                <a href="{{ url_for('reference_insert', code='external_reference', origin_id=object_.id) }}">+ {{ _('external reference')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_reference', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography', origin_id=object_.id) }}">+ {{ _('bibliography')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition', origin_id=object_.id) }}">+ {{ _('edition')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference', origin_id=object_.id) }}">+ {{ _('external reference')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['reference'].display('reference')|safe }}
     </div>
     <div id="tab-file">
         {% if 'contributor'|is_authorized %}
-        <div class="toolbar">
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_file', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
-                <a href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_add_file', id_=object_.id)}}">{{ _('add')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert', origin_id=object_.id) }}">+ {{ _('file')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['file'].display('file')|safe }}
     </div>
     {% if object_.system_type == 'place' %}
         <div id="tab-feature">
-            <div>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('feature')|uc_first }}</a>
             </div>
             {{ tables['feature'].display('feature')|safe }}
         </div>
     {% elif object_.system_type == 'feature' %}
         <div id="tab-stratigraphic-unit">
-            <div>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('stratigraphic unit')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('stratigraphic unit')|uc_first }}</a>
             </div>
             {{ tables['stratigraphic-unit'].display('stratigraphic-unit')|safe }}
         </div>
     {% elif object_.system_type == 'stratigraphic unit' %}
         <div id="tab-find">
-            <div>
-            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('find')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id)}}">+ {{ _('find')|uc_first }}</a>
             </div>
             {{ tables['find'].display('find')|safe }}
         </div>
         <div id="tab-human-remains">
-            <div class="button-bar">
-                <a href="{{ url_for('place_insert', origin_id=object_.id, system_type='human_remains')}}">+ {{ _('human remains')|uc_first }}</a>
+            <div class="toolbar">
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert', origin_id=object_.id, system_type='human_remains')}}">+ {{ _('human remains')|uc_first }}</a>
             </div>
             {{ tables['human-remains'].display('human_remains')|safe }}
         </div>
