--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -30,7 +30,7 @@
                         <div id="tab-{{ node.id }}">
                             <p><strong>{{ node.name }}</strong></p>
                             <div style="float:left;margin-right:3em;">
-                                <div class="button-bar">
+                                <div class="toolbar">
                                     {% if node.locked or not 'editor'|is_authorized %}
                                         <input
                                             class="tree-filter"
@@ -49,15 +49,15 @@
                                                 style="width:8em;">
                                             {% if not node.locked %}
                                                 <input type="hidden" name="mode" value="insert">
-                                                <button type="submit" value="insert" name="add-node-submit">+</button>
+                                                <button class="btn btn-outline-primary btn-sm" type="submit" value="insert" name="add-node-submit">+</button>
                                             {% endif %}
                                         </form>
                                     {% endif %}
 
                                     {% if type_ in ['custom', 'value'] and 'manager'|is_authorized %}
-                                        <a href="{{ url_for('hierarchy_update', id_=node.id) }} ">{{ _('edit')|uc_first }}</a>
+                                        <a class="btn btn-outline-primary btn-sm" href="{{ url_for('hierarchy_update', id_=node.id) }} ">{{ _('edit')|uc_first }}</a>
                                         {% if not node.system and node.count < 1 and not node.subs %}
-                                            <a onclick="return confirm('{{ _('delete')|uc_first }} {{ node.name.replace('\'', '') }}?')"
+                                            <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{ _('delete')|uc_first }} {{ node.name.replace('\'', '') }}?')"
                                                 href="{{ url_for('hierarchy_delete', id_=node.id) }} ">{{ _('delete')|uc_first }}</a>
                                         {% endif %}
                                     {% endif %}
