--- a/openatlas/templates/user/view.html
+++ b/openatlas/templates/user/view.html
@@ -5,12 +5,12 @@
 {% endblock %}
 {% block content %}
     {% if 'manager'|is_authorized %}
-        <div class="button-bar">
+        <div class="toolbar">
             {% if user.group != 'admin' or current_user.group == 'admin' %}
-                <a href="{{ url_for('user_update', id_=user.id) }}">{{ _('edit')|uc_first }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('user_update', id_=user.id) }}">{{ _('edit')|uc_first }}</a>
             {% endif %}
             {% if user.id != current_user.id and (user.group != 'admin' or current_user.group == 'admin') %}
-                <a onclick="return confirm('{{_('delete')|uc_first }} {{ user.username }}?')"
+                <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{_('delete')|uc_first }} {{ user.username }}?')"
                    href="{{ url_for('user_index', action='delete', id_=user.id) }}">{{ _('delete')|uc_first }}</a>
             {% endif %}
         </div>
