Fixing network css

--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -11,7 +11,7 @@
         <div style="float:right;">
             <svg></svg>
             <p>
-                <a class="btn btn-outline-primary btn-sm" onclick="saveSvgAsPng(d3.select('svg').node(), 'network.png')">{{ _('download')|uc_first }}</a>
+                <span class="btn btn-outline-primary btn-sm" onclick="saveSvgAsPng(d3.select('svg').node(), 'network.png')">{{ _('download')|uc_first }}</span>
             </p>
         </div>
         <script>
