--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -10,7 +10,7 @@
         <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
         <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
         <li><a href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number|safe }}</a></li>
-        {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
+        {% for table_name in ['node', 'feature', 'stratigraphic-unit', 'find', 'human-remains'] %}
             {% if tables[table_name].rows %}
                 <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number|safe }}</a></li>
             {% endif %}
@@ -57,12 +57,14 @@
         {% endif %}
         {{ tables['source'].display('source')|safe }}
     </div>
-    {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find'] %}
-        {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name].rows %}
+    {% for name in ['event', 'actor', 'place', 'feature', 'stratigraphic-unit', 'find', 'node', 'human-remains'] %}
+        {% if name not in ['node', 'feature', 'stratigraphic-unit', 'find', 'human-remains'] or tables[name].rows %}
             <div id="tab-{{name}}">
-                {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
+                {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find', 'human-remains'] %}
                     <div class="button-bar">
-                        <a href="{{ url_for('file_add', id_=entity.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
+                        {% if name != 'node' %}
+                            <a href="{{ url_for('file_add', id_=entity.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
+                        {% endif %}
                         {% if name == 'place' %}
                             <a href="{{ url_for('place_insert', origin_id=entity.id) }}">+ {{ _('place')|uc_first }}</a>
                         {% else %}
