Added API link to entity views

--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -36,6 +36,7 @@
                 {{ actor|note|safe }}
                 {{ actor|display_external_references|safe }}
                 {{ actor|description|safe }}
+                {{ actor|api_link|safe }}
             </div>
             <div style="clear:both;"></div>
         </div>
