--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -34,6 +34,7 @@
                 {{ event|note|safe }}
                 {{ event|display_external_references|safe }}
                 {{ event|description|safe }}
+                {{ event|api_link|safe }}
             </div>
             <div style="clear:both;"></div>
         </div>
