--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -33,6 +33,7 @@
                 {{ info|display_info|safe }}
                 {{ reference|note|safe }}
                 {{ reference|description|safe }}
+                {{ reference|api_link|safe }}
             </div>
             <div style="clear:both;"></div>
         </div>
