--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -34,6 +34,7 @@
                 {{ source|note|safe }}
                 {{ source|display_external_references|safe }}
                 {{ source|description|safe }}
+                {{ source|api_link|safe }}
             </div>
             <div style="clear:both;"></div>
         </div>
