--- a/openatlas/templates/object/view.html
+++ b/openatlas/templates/object/view.html
@@ -24,6 +24,7 @@
                 {{ info|display_info|safe }}
                 {{ object_|note|safe }}
                 {{ object_|description|safe }}
+                {{ object_|api_link|safe }}
             </div>
             <div style="clear:both;"></div>
         </div>
