--- a/openatlas/templates/admin/log.html
+++ b/openatlas/templates/admin/log.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('logs')]|crumb }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], _('logs')]|crumb }}
+{% endblock %}
 {% block content %}
-    <div>
+    <div class="toolbar">
         <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{_('delete all logs?')|uc_first }}')"
             href="{{ url_for('admin_log_delete') }}">{{ _('delete all')|uc_first }}</a>
     </div>
