--- a/openatlas/templates/admin/check_link_duplicates.html
+++ b/openatlas/templates/admin/check_link_duplicates.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('check link duplicates')]|crumb }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], _('check link duplicates')]|crumb }}
+{% endblock %}
 {% block content %}
     <div class="toolbar">
         {{ 'Data_integrity'|manual_link|safe }}
