--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('admin')]|crumb }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('admin')]|crumb }}
+{% endblock %}
 {% block content %}
     <div id="admin_index">
         {% for dir, value in writeable_dirs.items() %}
