--- a/openatlas/templates/admin/logo.html
+++ b/openatlas/templates/admin/logo.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('logo')]|crumb }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], _('logo')]|crumb }}
+{% endblock %}
 {% block content %}
     <div class="toolbar">
         {{ 'Logo'|manual_link|safe }}
